<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/home_layout"
    android:tag="home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/webshortcut_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/webshortcut_secondRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_google"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/fav_google"
            android:drawablePadding="-5sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            android:text="Google"
            android:textAlignment="center"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_youtube"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/fav_youtube"
            android:drawablePadding="-5sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            android:text="Youtube"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_localurl"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawablePadding="-5sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            android:text="@string/urlname"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/webshortcut_secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_facebook"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/fav_facebook"
            android:drawablePadding="-5sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            android:text="@string/facebook"
            android:textAlignment="center"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_instagram"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/fav_instagram"
            android:drawablePadding="-5sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            android:text="@string/instagram"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_twitter"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/fav_twitter"
            android:drawablePadding="-5sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            android:text="@string/twitter"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>