<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="@color/appBackground">

    <ImageButton
        android:id="@+id/back_button"
...
        android:hint="@string/location_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textUri"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tabs_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tabs_button"
        android:layout_width="32dp"
...
